# aisolution-crm

./: .env.example  .gitignore  BUILD_PHASES.md  CLAUDE.md  CRM_SPEC.md  PROGRESS.md  docker-compose.yml
backend/: .env.example  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 202607080001_users_and_events.py  202607080002_leads.py  202607080003_clients_projects_milestones.py  202607080004_finance_entries.py  202607080005_files.py  202607080006_tasks.py  202607080007_login_tokens.py  202607080008_finance_entry_category.py  202607080009_lead_archive.py  202607080010_user_profile_fields.py  202607080011_user_role_title.py  202607080012_lead_proposal_finance.py  202607080013_crm_goal.py  202607090001_lead_company_name.py  202607090002_user_permissions.py  202607090003_user_archive.py
backend/app/: main.py
backend/app/api/: analytics.py  auth.py  clients.py  files.py  finance.py  leads.py  projects.py  settings.py  tasks.py  users.py
backend/app/core/: config.py  deps.py  security.py  storage.py
backend/app/db/: bot_notify.py  events.py  pool.py  visibility.py
backend/scripts/: create_user.py  import_legacy_leads.py
backend/tests/: conftest.py  test_analytics.py  test_cors.py  test_files.py  test_finance.py  test_finance_analytics_expansion.py  test_lead_channels.py  test_leads.py  test_projects.py  test_rbac.py  test_round_robin.py  test_tasks.py  test_user_archive.py  test_user_permissions.py
bot/: .env.example  config.py  main.py  (+3 more)
bot-leads/: .env.example  config.py  main.py  pyproject.toml
(+37 files in other folders)
